--- a/app/views/solutions/edit.html.erb
+++ b/app/views/solutions/edit.html.erb
@@ -1,6 +1,33 @@
 <h1>Editing solution</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @solution %> |
-<%= link_to 'Back', solutions_path %>
+<%= @error.name%>
+<%= @error.description%>
+
+<%= form_for(@solution, :url => "/errors/#{@error.id}/solutions/#{@solution.id}") do |f| %>
+  <% if @solution.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@solution.errors.count, "error") %> prohibited this solution from being saved:</h2>
+
+      <ul>
+      <% @solution.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+
+
+
+<!--<%#= render 'form' %>-->
+
+<%= link_to 'Back', error_path(@error) %>
