--- a/app/views/errors/_form.html.erb
+++ b/app/views/errors/_form.html.erb
@@ -16,8 +16,18 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :"copy and paste the error that you see" %><br />
     <%= f.text_area :description %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :"explain what is happening" %><br />
+    <%= f.text_area :explanation %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :"submit link to Github/Gist file" %><br />
+    <%= f.text_field :url %>
   </div>
   <div class="actions">
     <%= f.submit %>
