--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -1,24 +1,29 @@
-<h1>Listing errors</h1>
+<div class ="row">
+  <div class ="seven columns centered">
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Explanation</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <h1>Listing errors</h1>
 
-<% @errors.each do |error| %>
-  <tr>
-    <td><%= link_to error.name, error %></td>
-    <td><%= error.explanation %></td>
-    <td><%= link_to 'Edit', edit_error_path(error) %></td>
-    <td><%= link_to 'Destroy', error, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Explanation</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
 
-<br />
+        <% @errors.each do |error| %>
+          <tr>
+            <td><%= link_to error.name, error %></td>
+            <td><%= error.explanation %></td>
+            <td><%= link_to 'Edit', edit_error_path(error) %></td>
+            <td><%= link_to 'Destroy', error, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        </table>
 
-<%= link_to 'New Error', new_error_path %>
+        <br />
+
+        <%= link_to 'New Error', new_error_path %>
+  </div>
+</div>
