--- a/app/views/errors/new.html.erb
+++ b/app/views/errors/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New error</h1>
+<div class="row">
+  <div class="seven columns centered">
+    <h1>New error</h1>
 
-<%= render 'form' %>
+  
+    <%= render 'form' %>
 
-<%= link_to 'Back', errors_path %>
+    <%= link_to 'Back', errors_path %>
+  </div>
+</div>
